adding fishgrowth_guide function for easier use

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(aggregate_tank_data)
 export(calculate_metrics)
 export(create_simulation_data)
+export(fishgrowth_guide)
 export(generate_summary_table)
 export(get_data_template)
 export(import_fish_data)
