improved functions and final results output, including plots and a txt report.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,ggsave)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_excel)
 importFrom(stats,aov)
