Update documentation for V2.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calculate_metrics)
 export(create_simulation_data)
 export(fishgrowth_guide)
 export(generate_summary_table)
+export(get_analysis_template)
 export(get_data_template)
 export(import_fish_data)
 export(plot_normality)
